--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -1,16 +1,12 @@
-html {
-  height: 100%;
-  width: 100%;
+* {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
 
-body {
+html,body {
   height: 100%;
   width: 100%;
-  margin: 0px;
-  padding: 0px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
@@ -21,5 +17,5 @@ body {
     "Segoe UI Emoji", Segoe UI Symbol;
 }
 .shadow {
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05), 0 2px 6px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 -3px 4px rgba(0, 0, 0, 0.05), 0 6px 10px 0 rgba(0, 0, 0, 0.1);
 }
