--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -19,3 +19,7 @@ html,body {
 .shadow {
   box-shadow: 0 -3px 4px rgba(0, 0, 0, 0.05), 0 6px 10px 0 rgba(0, 0, 0, 0.1);
 }
+.flex {
+  display: flex;
+  align-items: center;
+}
